Closed Bug 330578 Opened 18 years ago Closed 17 years ago

(Shift+) delete in URL bar autocomplete list no longer persistent.

Categories

(Firefox :: Bookmarks & History, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
Firefox 3 alpha5

People

(Reporter: jst, Assigned: asaf)

References

(Blocks 1 open bug)

Details

(Keywords: privacy, regression)

Attachments

(1 file, 1 obsolete file)

Start typing in the URL bar and you get a list of URLs that match from your browser history, navigate to any item in the list and hit Shift+delete and the item goes away, but type the same thing into the URL bar later and you'll see the item back in the list.

This is a fairly recent regression, I'm guessing places is to blame, but I could be wrong.
Flags: blocking-firefox2?
Version: 1.0 Branch → Trunk
*** Bug 330541 has been marked as a duplicate of this bug. ***
Assignee: nobody → brettw
Priority: -- → P2
Target Milestone: --- → Firefox 2 alpha2
Keywords: privacy
Flags: blocking-firefox2? → blocking-firefox2+
Priority: P2 → P3
Target Milestone: Firefox 2 alpha2 → Firefox 2 beta1
Severity: normal → major
Summary: Shift+delete in URL bar autocomplete list no longer persistent. → (Shift+) delete in URL bar autocomplete list no longer persistent.
this needs to get fixed somehow for 1.9a1.
Flags: blocking1.9a1+
Severity: major → normal
Target Milestone: Firefox 2 beta1 → Firefox 3 alpha2
Flags: blocking-firefox2+
Chris: Why is this blocking 1.9a1? This is a P3 for me. It is not nearly as important as most of the other bugs I have on my plate, many of which won't get fixed for 1.9a1
its hard to get people using alpha/beta releases for any length of time, and providing good in-depth feedback if there are privacy and security problems associated with the builds.  alpha testers in large part have a keen interest in privacy issues.
The priorities still don't mesh. Many of the more important places bugs are basic stability, dataloss, and usability issues. This bug won't be fixed until all of those are, and I don't think all of those will make a1.
Assignee: brettw → nobody
Flags: blocking1.9?
Since places is off, this shouldn't currently be a bug in the trunk. Why can't I put blocking-1.9a1 back to "?"... I'll clear it instead. Since Places will presumably be turned back on, the 1.9 flag should stay.
Flags: blocking1.9a1+
Flags: blocking-firefox3?
Severity: normal → major
Priority: P3 → --
Target Milestone: Firefox 3 alpha2 → ---
What needs to happen is that the Simple Autocomplete Result should also have some kind of callback that the creator can register that calls when an item should be deleted. Then the history system should register this callback and delete the corresponding history item when it is called.
Flags: blocking-firefox3? → blocking-firefox3+
Is this a places bug?
I see this bug in my builds without places enabled.
On trunk?  I think at this point we can safely say that the old history backend is officially deprecated, but that's interesting to hear...
Target Milestone: --- → Firefox 3 alpha5
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → mano
Status: NEW → ASSIGNED
Attachment #266196 - Flags: review?(mconnor)
Comment on attachment 266196 [details] [diff] [review]
patch

r=mconnor
Attachment #266196 - Flags: review?(mconnor) → review+
Attachment #266196 - Attachment is obsolete: true
Attachment #266222 - Flags: review?(mconnor)
Comment on attachment 266222 [details] [diff] [review]
better, with tests

man, I should have caught that...
Attachment #266222 - Flags: review?(mconnor) → review+
mozilla/toolkit/components/autocomplete/Makefile.in 1.2
mozilla/toolkit/components/autocomplete/public/nsIAutoCompleteSimpleResult.idl 1.2
mozilla/toolkit/components/autocomplete/src/nsAutoCompleteSimpleResult.cpp 1.3
mozilla/toolkit/components/autocomplete/src/nsAutoCompleteSimpleResult.h 1.3
mozilla/toolkit/components/autocomplete/tests/Makefile.in initial revision: 1.1
mozilla/toolkit/components/autocomplete/tests/unit/test_330578.js initial revision: 1.1
mozilla/toolkit/components/places/src/nsNavHistory.cpp 1.127
mozilla/toolkit/components/places/src/nsNavHistory.h 1.79
mozilla/toolkit/components/places/src/nsNavHistoryAutoComplete.cpp 1.9
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
verified with Windows trunk build from 20070620
Status: RESOLVED → VERIFIED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
Blocks: 87098
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: