Bug 330578 - (Shift+) delete in URL bar autocomplete list no longer persistent. r=mconnor.